added search function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,18 @@
       <i class="fa fa-music" style="color: #1db954"></i> SHOW ALL
     </button>
     <section id="data-txt-container">
+      <!--------- SEARCH --------->
+      <div id="search-container">
+        <input type="search" id="input-search" placeholder="Search" />
+        <select name="search-prop" id="search-prop">
+          <option value="name" selected>Artist name</option>
+          <option value="genres">Genre</option>
+          <option value="label">Label</option>
+        </select>
+        <button id="search-btn">
+          <i class="fas fa-search" style="color: #1db954"></i>
+        </button>
+      </div>
       <p>This app uses cookies!</p>
       <!-- <section id="player">
         <iframe
